[package]
name = "filesystem"
version.workspace = true
edition.workspace = true

[dependencies]
db_utils = { path = "../db_utils" }
debug = { path = "../debug" }
project = { path = "../project" }
salsa.workspace = true
smol_str.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
